--- a/src/data/css/options.css
+++ b/src/data/css/options.css
@@ -1,22 +1,76 @@
-body {background:-webkit-linear-gradient(top,cornflowerblue,lightskyblue) fixed;}
-.jumbotron{background:rgba(0,0,0,0.25);margin-top:2em;}
-.container .jumbotron{border-radius:25px;}
-.jumbotron h1{
-    display:-webkit-box;
-    -webkit-box-pack:center;
-    text-shadow:0 0 10px black;
-    color:white;
-    margin-bottom:0;
+body {
+    background: -webkit-linear-gradient(top, cornflowerblue, lightskyblue) fixed;
 }
-.jumbotron p{display:-webkit-box;-webkit-box-pack:center;font-family:"Microsoft YaHei";}
-.glyphicon:before{margin-right:5px}
-.panel{box-shadow:0 5px 10px rgba(0,0,0,.25);border-radius:11px;}
-.panel-heading{border-radius:10px 10px 0 0;}
-.panel-footer{border-radius:0 0 10px 10px;}
-td>span{display:-webkit-box;-webkit-box-align:center;height:34px;padding-left:1em;}
-td:last-child>span{padding-left:5px;height:initial;}
-td>span.glyphicon{display:-webkit-box;}
-tbody>tr{animation:tableFade 0.5s}
-@keyframes tableFade
-{from{opacity:0}
-to{opacity:1}}
+
+.jumbotron {
+    background: rgba(0, 0, 0, 0.25);
+    margin-top: 2em;
+}
+
+.container .jumbotron {
+    border-radius: 25px;
+}
+
+.jumbotron h1 {
+    display: -webkit-box;
+    -webkit-box-pack: center;
+    text-shadow: 0 0 10px black;
+    color: white;
+    margin-bottom: 0;
+}
+
+.jumbotron p {
+    display: -webkit-box;
+    -webkit-box-pack: center;
+    font-family: "Microsoft YaHei";
+}
+
+.glyphicon:before {
+    margin-right: 5px
+}
+
+.panel {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .25);
+    border-radius: 11px;
+}
+
+.panel-heading {
+    border-radius: 10px 10px 0 0;
+}
+
+.panel-footer {
+    border-radius: 0 0 10px 10px;
+}
+
+td>span {
+    display: -webkit-box;
+    -webkit-box-align: center;
+    height: 34px;
+    padding-left: 1em;
+}
+
+td:last-child>span {
+    padding-left: 5px;
+    height: initial;
+}
+
+td>span.glyphicon {
+    display: -webkit-box;
+}
+
+tbody>tr {
+    animation: tableFade 0.5s
+}
+
+@keyframes tableFade {
+    from {
+        opacity: 0
+    }
+    to {
+        opacity: 1
+    }
+}
+
+.disable {
+    color: #BBB;
+}
