--- a/cljs-src/resources/css/main.css
+++ b/cljs-src/resources/css/main.css
@@ -2,11 +2,13 @@ body {
     height: 100%;
     background: -webkit-linear-gradient(top , #afcffe, #fff) no-repeat scroll 0 0 rgba(0, 0, 0, 0);
 }
-h2, h4 {
+h1, h3 {
     text-shadow: white 0.1em 0.1em 0.1em;
     margin: 20px 0 0;
     color: #555;
 }
-.jumbotron {
-  color: inhert;
+.text-center {
+  display: table;
+  margin-right: auto;
+  margin-left: auto;
 }
